Hoping for a merge conflict

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
     color: white;
     background-color: #292727;
-    font-family: 'Sacramento';
-    font-size: 30px;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left: 20%;
-    margin-right: 20%;
+    font-family: 'Satisfy';
+    font-size: 40px;
+    margin-top: 25%;
+    margin-bottom: 15%;
+    margin-left: 30%;
+    margin-right: 40%;
 }
