--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body{
     color: white;
-    background-color: #292727;
-    font-family: 'Satisfy';
-    font-size: 40px;
-    margin-top: 25%;
-    margin-bottom: 15%;
-    margin-left: 30%;
-    margin-right: 40%;
+    background-color: black;
+    font-family: 'Sacramento', cursive;
+    font-size: 32px;
+    margin-top: 5%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
